# halo_description

./: CMakeLists.txt  README.md  package.xml
config/: display_urdf.rviz
launch/: load.launch  view_urdf.launch
urdf/: alphasense.urdf.xacro  alphasense_standalone.urdf.xacro  halo.urdf  halo.urdf.xacro  halo_standalone.urdf.xacro
urdf/meshes/: alphasense_simplified.dae  halo_body.dae  halo_handle_simplified.dae
